# slisp

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt  bob.h  dot.cpp  engine.cpp  engine.h  fundamental.cpp  fundamental.h  interpreter.cpp  interpreter.h  lfunctions.cpp  lfunctions.h  main.cpp  node.cpp  node.h  ondemandistream.cpp  ondemandistream.h  parsey.cpp  parsey.h  repl.cpp  repl.h  scopey.cpp  scopey.h  sdlfuncs.cpp  sdlfuncs.h  test.slisp  test.slisp.h  test2.slisp  test3.slisp  token.cpp  token.h  toker.cpp  toker.h
src/tests/: CMakeLists.txt  test-engine.cpp  test-stroengine.cpp  test-toker.cpp
wasmrepl/: CMakeLists.txt  building.txt
wasmrepl/html/: index.html
wasmrepl/html/samples/: doc.slisp  fac.html  fac.slisp  helloworld.slisp  perspect.html  perspect.slisp
wasmrepl/src/: emsBindings.cpp
